Added gitignore file and different WiFi config files

--- a/OS/wpa_supplicant-Wuawei.conf
+++ b/OS/wpa_supplicant-Wuawei.conf
@@ -3,7 +3,7 @@ update_config=1
 country=US
 
 network={
-	ssid="your_wifi_network_name"
-	psk="your_wifi_network_password"
+	ssid="HUAWEI-B612-DD28"
+	psk="23FQT41E1A8"
 	key_mgmt=WPA-PSK
 }
