--- a/OS/wpa_supplicant-DevNetwork.conf
+++ b/OS/wpa_supplicant-DevNetwork.conf
@@ -3,7 +3,7 @@ update_config=1
 country=US
 
 network={
-	ssid="your_wifi_network_name"
-	psk="your_wifi_network_password"
+	ssid="DevRouter2.4Ghz"
+	psk="D3v3l0p3"
 	key_mgmt=WPA-PSK
 }
